# artifact-mgmt-python-sdk

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.claude/agents/: sdk-reviewer.md
.github/workflows/: ci.yml
artifact_mgmt/: __init__.py  _artifact_model.py  _cache.py  _exceptions.py  _http.py  _pagination.py  _snapshot.py  _types.py  client.py
artifact_mgmt/serializers/: __init__.py  _base.py  _huggingface.py  _pickle.py  _sklearn.py  _tensorflow.py  _torch.py
docs/: IMPLEMENTATION.md
tests/: conftest.py  test_artifact_model.py  test_cache.py  test_client_models.py  test_client_versions.py  test_exceptions.py  test_http.py  test_huggingface_serializer.py  test_load_model.py  test_pagination.py  test_pickle_serializer.py  test_promote_model.py  test_save_model.py  test_serializers.py  test_sklearn_serializer.py  test_snapshot.py  test_tensorflow_serializer.py  test_torch_serializer.py  test_types.py
