[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "artifact-mgmt-client"
version = "0.1.0"
description = "Python client for the Artifact Management Service"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "requests-aws4auth>=1.3",
    "boto3>=1.34",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0",
    "pytorch-lightning>=2.0",
]
transformers = [
    "transformers>=4.30",
    "safetensors>=0.4",
]
sklearn = [
    "scikit-learn>=1.3",
    "joblib>=1.3",
]
tensorflow = [
    "tensorflow>=2.13",
]
all = [
    "torch>=2.0",
    "pytorch-lightning>=2.0",
    "transformers>=4.30",
    "safetensors>=0.4",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "tensorflow>=2.13",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "ruff>=0.4",
    "mypy>=1.10",
    "boto3-stubs[s3]>=1.34",
]

[tool.hatch.build.targets.wheel]
packages = ["artifact_mgmt"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "artifact_mgmt.serializers._torch",
    "artifact_mgmt.serializers._huggingface",
    "artifact_mgmt.serializers._sklearn",
    "artifact_mgmt.serializers._tensorflow",
]
ignore_errors = true
